--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hi! It is your sweety success exercises in JavaScript!</h1>
+    <h2>Keep going on doing reps!</h2>
+    <h3>You are awesome!</h3>
     <script src="exercises.js" ></script>
 </body>
 </html>
