--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi! It is your sweety success exercises in JavaScript!</h1>
-    <h2>Keep going on doing reps!</h2>
+    <h1>Hi! It is your sweety successful JavaScript exercises!</h1>
+    <h2><i> Keep going on doing reps!</i></h2>
     <h3>You are awesome!</h3>
     <script src="exercises.js" ></script>
 </body>
